--- a/main.ipynb
+++ b/main.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Introduction\n",
+    "# Introduction\n",
     "\n",
     "## Inspiration\n",
     "[Music maps](https://www.music-map.com/) are incredibly cool and very useful for discovering new music within a certain genre, and we have been wanting to do something involving music and ML for a long time - that's why we decided to go with music for our overall theme. We were partially inspired by [The Language of Hip-Hop](https://pudding.cool/2017/09/hip-hop-words/), a project that visualizes hip-hop vocabulary and rappers along with it. We thought - why not try classifying music based on the audio as well? Sometimes lyrically sad songs don't have that sad timbre, and especially within rap where the lyrical elements overlap, adding in audio analysis could be really helpful. \n",
