updated headings on site

--- a/main.ipynb
+++ b/main.ipynb
@@ -4,21 +4,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introduction\n",
+    "# *SHMOOD*\n",
+    "### Shruti Ray & Aditi Sundararaman\n",
+    "***\n",
+    "## Introduction\n",
     "\n",
-    "## Inspiration\n",
+    "### Inspiration\n",
     "[Music maps](https://www.music-map.com/) are incredibly cool and very useful for discovering new music within a certain genre, and we have been wanting to do something involving music and ML for a long time - that's why we decided to go with music for our overall theme. We were partially inspired by [The Language of Hip-Hop](https://pudding.cool/2017/09/hip-hop-words/), a project that visualizes hip-hop vocabulary and rappers along with it. We thought - why not try classifying music based on the audio as well? Sometimes lyrically sad songs don't have that sad timbre, and especially within rap where the lyrical elements overlap, adding in audio analysis could be really helpful. \n",
     "\n",
-    "## Our motivation\n",
+    "### Our motivation\n",
     "The hip-hop genre has a bad rep amongst almost everyone except teenagers and young adults. It’s seen by many as disrespectful, void of musicality, or generally lacking positivity. Overall, it is generally just pushed to the side and trivialized to a single genre (be that “rap” or “hip-hop” or any other name). However, hip-hop music has been a part of our lives for a long time, and we argue that it’s actually quite diverse - we listen to different rap songs during different occasions, and for different purposes. \n",
     "\n",
     "Spotify has been very good, recently, at embracing up-and-coming hip-hop artists and making it accessible to more people by creating playlists for different moods. We’ve found, however, that many of these playlists aren’t very good at actually choosing the right songs for a specific time and place. Many playlists created for relaxing, for example, contain some songs that are a little too upbeat. Others, like those created for a night out, contain some songs that are a little too hardcore and not musical enough. This is understandable, as people tend to have different tastes and preferences. We wondered if using a machine to categorize songs into certain moods would classify songs more accurately than human choice.\n",
     "\n",
-    "## Our goal\n",
+    "### Our goal\n",
     "We want to classify each song into one of four categories: ‘Party’, ‘Gym’, ‘Chill’ and ‘Sad’, for nights out, workout motivation, relaxing/studying and sorrow, respectively. To do so, we’ll use the [audio metadata](https://developer.spotify.com/documentation/web-api/reference/tracks/get-audio-features/) that Spotify provides for each song. We’ll sort and visualize the data, determine what metadata is most useful in classifying tracks accurately, and train a machine learning model on these features. \n",
     "\n",
     "\n",
-    "### Imports\n",
+    "#### Imports\n",
     "A brief overview of the modules we used:\n",
     "* [spotipy](https://spotipy.readthedocs.io/en/latest/), a module that allows us to work with the Spotify api in a more pythonic way\n",
     "* [pandas](https://pandas.pydata.org/) and [numpy](http://www.numpy.org/) to organize our data\n",
@@ -49,16 +52,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data collection & processing\n",
+    "## Data collection & processing\n",
     "\n",
-    "## Creating playlists\n",
+    "### Creating playlists\n",
     "Let’s create four playlists with appropriate tracks for each of our “moods”. In doing so, we want to ensure that each song undisputedly belongs in said playlist. This is challenging because within the rap genre, there are many songs that could be classified as both gym and party songs. We want to find songs that are unambiguous - gym songs, for example have minimal melodic elements and are generally more aggressive. Party songs, however, have a rhythmic element and perhaps a chorus that is slightly more musical. Chill songs have a relaxed beat and less talking, while sad songs have minimal beats and more acoustic elements. We’ll have to play it by ear and use our pre-existing knowledge of rap music as well as our ability to classify by listening to create these lists.\n",
     "\n",
     "\n",
-    "## What data do we want?\n",
+    "### What data do we want?\n",
     "In the Spotify database, all elements, such as playlists and individual songs, are identified by a unique ID, called a uri. The [spotipy module](https://spotipy.readthedocs.io/en/latest/) hooks into the Spotify API to obtain information and metadata for songs, playlists, albums using this uri. We’ll be using spotipy for the entirety of this tutorial, as it’s a convenient tool that makes API requests more “pythonic” in nature.\n",
     "\n",
-    "## About the audio metadata\n",
+    "### About the audio metadata\n",
     "Each song comes with metadata, and the metadata we’re interested in are the eight “features” that Spotify has assigned to each song - acousticness, danceability, energy, instrumentalness, liveness, loudness, speechiness, valence, and tempo. Each of these are float values that are defined as follows:\n",
     "* **Acousticness**: A confidence measure from 0.0 to 1.0 of whether the track is acoustic. 1.0 represents high confidence the track is acoustic. A song that is acoustic does not have any electrical amplification or elements.\n",
     "* **Danceability**: Danceability describes how suitable a track is for dancing based on a combination of musical elements including tempo, rhythm stability, beat strength, and overall regularity. A value of 0.0 is least danceable and 1.0 is most danceable.\n",
@@ -72,7 +75,7 @@
     "\n",
     "Straight away, we decided that we won’t be considering liveness as a feature, since none of the tracks that we’re analyzing are performed live.\n",
     "\n",
-    "### Spotify authorization"
+    "#### Spotify authorization"
    ]
   },
   {
@@ -99,8 +102,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data processing\n",
-    "## Defining necessary functions\n",
+    "## Data processing\n",
+    "### Defining necessary functions\n",
     "Now that we’ve created our playlists on Spotify, let’s put them into a dataframe for easier visualization. We want to include features like song name, artists and uri, as well as the audio features we can get from the spotipy api. We’ll contain this code in two functions, so that we can reuse them as needed - one will create a dataframe from an existing Spotify playlist, one will create a dataframe from a manually passed-in list of uris. \n"
    ]
   },
@@ -521,8 +524,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exploratory analysis & data visualization\n",
-    "## Plotting our data\n",
+    "## Exploratory analysis & data visualization\n",
+    "### Plotting our data\n",
     "Now that we have dataframes with the information we need, we can plot all of it on a bar graph. \n",
     "By visualizing the audio features, we can get a feel for the data and also start to think about how to train a machine learning model using the features of each song.\n",
     "\n",
@@ -602,7 +605,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##  Data analysis\n",
+    "###  Data analysis\n",
     "The final four features were decided on were speechiness, energy, loudness, and acousticness. Here’s why:\n",
     "\n",
     "* Speechiness, energy, loudness, and acousticness all had distinct averages amongst themselves.\n",
@@ -615,8 +618,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Hypothesis testing & machine learning\n",
-    "## Decision tree\n",
+    "## Hypothesis testing & machine learning\n",
+    "### Decision tree\n",
     "Now, let’s try to classify our data. Our ultimate goal is to use the information we’ve collected about each song, and somehow determine what “mood” that song falls into.  \n",
     "\n",
     "After looking at various classification methods, we decided that a decision tree was the best model for our data, and we used sklearn's [decision tree classifier](https://scikit-learn.org/stable/modules/generated/sklearn.tree.DecisionTreeClassifier.html) to fit our data. From our previous data analysis, we’ve decided that the best features to use are speechiness, energy, loudness, and acousticness. \n",
@@ -1204,7 +1207,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Grid search cross-validation\n",
+    "### Grid search cross-validation\n",
     "There is no default maximum depth for a decision tree in sklearn. Having a decision tree that is too deep may result in overfitting of the data, which means that the tree would perform poorly when predicting on test data because it loses its generality. We used the GridSearchCV model to try and determine an ideal max_depth value and attempted to redefine and retrain our decision tree using this depth, but changing the max depth did not affect the classification of our test data.\n"
    ]
   },
@@ -1739,7 +1742,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Hypothesis testing\n",
+    "### Hypothesis testing\n",
     "We decided that it would be fun to test our model against Spotify's officially curated hip-hop playlists, as we've often found that their playlists are sadly lacking in the actual moods they claim to cater to. We picked the most popular Spotify playlists that matched some of our defined moods:\n",
     "\n",
     "* Gym: [**Beast Mode** by Spotify](https://open.spotify.com/user/spotify/playlist/37i9dQZF1DX76Wlfdnj7AP?si=woBb5x1QRuy7XpUflWNQLg)\n",
@@ -1843,8 +1846,8 @@
     "Looks like our hypothesis was correct. Spotify's playlists aren't that great.... but what else is new? \n",
     "\n",
     "\n",
-    "# Insight & policy decision\n",
-    "## Conclusion\n",
+    "## Insight & policy decision\n",
+    "### Conclusion\n",
     "* Since we are classifying training data ourselves, there is definite bias in our selection; therefore there are understandable disparities between our expectations and machine-predicted data \n",
     "* Individual rap songs do tend to fit several bills, so the “disparities” that we observe between our classification and the model’s predictions don’t mean that the model is entirely wrong. It’s actually pretty accurate, in the sense that it may classify a song as ‘Gym’  that we labeled ‘Party’, but that doesn’t mean we wouldn’t listen to it in the gym. Several songs in my party and gym playlists, in fact, overlap. That’s part of the beauty of rap - many songs are suited to different occasions. \n",
     "* One of the problems with trying to classify rap music is that the mood that it suits doesn’t always necessarily line up with its musical elements. One feature we think would definitely improve the accuracy of our model is adding some kind of weighted score that takes into account the valence of the song lyrics. We believe that combining this with the actual musical elements would produce a much more accurate classifier. \n",
